Added JS toolchain

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -4,17 +4,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    {% tailwind_css %}
-    <link rel="stylesheet" href="https://unpkg.com/modern-css-reset/dist/reset.min.css" />
-    <link rel="stylesheet" href="{% static 'core/css/base.css' %}" />
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.12.0/dist/cdn.min.js"></script>
+    <link rel="stylesheet" href="{% static 'core/dist/css/main.css' %}" />
     <link rel="icon" type="image/png" href="{% static 'core/favicon.png' %}" />
-    <script defer type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script defer nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script defer src="{% static 'core/dist/js/page.js' %}"></script>
     {% block head %}{% endblock %}
   </head>
-  <body>
-    <nav>
-      <img src="{% static 'core/favicon.png' %}"/>
+  <body class="bg-slate-50 flex h-screen">
+    <nav class="w-24 p-4 bg-sky-950 flex flex-col text-white close">
+      <header>
+        <img
+          src="{% static 'core/images/personal.png' %}"
+          alt="logo"
+          class="rounded-3xl bg-gray-100"
+        />
+        <span class="name">Aluno</span>
+        <span class="profession">3° P-Tech</span>
+
+        <i class="bx bx-chevron-right toggle"></i>
+      </header>
+
+      <ul class="list-none">
+        <li id="home-icon">
+          <a href="">
+            <box-icon name="user"></box-icon>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <box-icon name="home-alt"></box-icon>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <box-icon name="message-square-dots"></box-icon>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <box-icon name=""></box-icon>
+          </a>
+        </li>
+      </ul>
     </nav>
     {% block content %}{% endblock %}
   </body>
