--- a/core/static/core/css/main.css
+++ b/core/static/core/css/main.css
@@ -30,9 +30,15 @@
   [multiple],
   textarea,
   select {
-    @apply shadow-sm rounded-lg transition-all border
-    focus-visible:outline-none focus:border-cyan-500 hover:border-cyan-500
+    @apply shadow-sm rounded-md transition-all border
+    focus-visible:outline-none focus:border-cyan-500 hover:border-cyan-500;
   }
 
-  [type='checkbox'], [type='radio'] {}
+  [type='checkbox'], [type='radio'] {
+    @apply ml-2 mr-1;
+  }
+
+  hr {
+    @apply my-3
+  }
 }
