--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -4,13 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.12.0/dist/cdn.min.js"></script>
     <link rel="stylesheet" href="{% static 'core/dist/css/main.css' %}" />
     <link rel="icon" type="image/png" href="{% static 'core/favicon.png' %}" />
-    <script defer src="{% static 'core/dist/js/page.js' %}"></script>
     {% block head %}{% endblock %}
+    <script defer src="{% static 'core/dist/js/page.js' %}"></script>
   </head>
-  <body class="bg-slate-50 flex h-screen">
+  <body class="bg-slate-50 flex h-screen dark:bg-slate-800 dark:text-slate-200">
     <nav class="w-24 p-4 bg-sky-950 flex flex-col text-white close">
       <header>
         <img
