--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,25 +1,55 @@
 {% extends 'core/base.html' %}
+{% load static %}
 {% block content %}
-<form class="form">
-  <h1 class="text-2xl font-bold mb-2">Bem vindo</h1>
-  <h2 class="text-lg">Entre com sua conta escolar</h2>
-  <div class="field">
-    <span class="icon">
-      <ion-icon name="mail-outline"></ion-icon>
-    </span>
-    <input type="email" placeholder=" " required class="invalid:text-red-600 duration-700" />
-    <label>Email</label>
-  </div>
+<main class="w-full h-full bg-gradient-to-br from-cyan-600 to-indigo-500 p-10">
+  <section
+    class="w-full h-full bg-cyan-50 dark:bg-slate-800 rounded-2xl shadow-sm shadow-slate-800 flex"
+  >
+    <form action="login" method="get" class="p-8 flex flex-col items-center">
+      <header class="flex gap-4 items-center mb-6">
+        <img
+          src="{% static 'core/images/logo.png' %}"
+          alt="logo"
+          class="h-24"
+        />
+        <div>
+          <h1 class="text-3xl font-sans font-bold">Login</h1>
+          <h2 class="text-lg font-sans">Entre com seu ID e senha</h2>
+        </div>
+      </header>
+      <div>
+        <div class="flex flex-col gap-1 mb-3">
+          <label for="school-code">Código da escola:</label>
+          <!-- TODO: Add a pop-up that helps find their school -->
+          <input type="number" name="school-code" id="school-code" />
+        </div>
+        <div class="flex flex-col gap-1 mb-3">
+          <label for="user-id">ID:</label>
+          <input type="number" name="user-id" id="user-id" />
+        </div>
+        <div class="flex flex-col gap-1 mb-3">
+          <label for="password">Senha:</label>
+          <input type="password" name="password" id="password" />
+        </div>
 
-  <div class="field">
-    <span class="icon">
-      <ion-icon name="lock-closed-outline"></ion-icon>
-    </span>
-    <input type="password" placeholder=" " required />
-    <label>Senha</label>
-  </div>
-
-  <a href="#" class="hover:underline underline-offset-2">Esqueceu sua senha?</a>
-  <button type="submit" class="bg-blue-950 mt-2 h-12 text-gray-200 rounded-xl font-semibold">Entrar</button>
-</form>
+        <a href="new_password" class="text-sky-700 dark:text-sky-500"
+          >Enqueci a senha</a
+        >
+        <br />
+        <input
+          type="submit"
+          value="Entrar"
+          class="bg-sky-700 dark:bg-sky-600 py-2 px-5 mt-2 rounded hover:shadow cursor-pointer"
+        />
+      </div>
+    </form>
+    <aside class="flex-1">
+      <img
+        src="{% static 'core/images/desenho.png' %}"
+        alt="lineart de alunos em sala de aula"
+        class="bg-gray-200 h-full object-cover object-center rounded-r-2xl"
+      />
+    </aside>
+  </section>
+</main>
 {% endblock %}
