--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -1,11 +1,12 @@
 {% extends 'core/base.html' %}
 {% load static %}
 {% block content %}
-<main class="w-full h-full bg-gradient-to-br from-cyan-600 to-indigo-500 p-10">
+<main class="w-full h-[90%] bg-gradient-to-br from-cyan-600 to-indigo-500 p-9">
   <section
-    class="w-full h-full bg-cyan-50 dark:bg-slate-800 rounded-2xl shadow-sm shadow-slate-800 flex"
+    class="w-full h-full bg-cyan-50 dark:bg-slate-800 rounded-2xl shadow-sm shadow-slate-800 flex justify-around"
   >
-    <form action="login" method="get" class="p-8 flex flex-col items-center">
+    <form action="{% url 'login' %}" method="POST" class="p-8 px-14 flex flex-col items-center">
+      {% csrf_token %}
       <header class="flex gap-4 items-center mb-6">
         <img
           src="{% static 'core/images/logo.png' %}"
@@ -25,7 +26,7 @@
         </div>
         <div class="flex flex-col gap-1 mb-3">
           <label for="user-id">ID:</label>
-          <input type="number" name="user-id" id="user-id" />
+          <input type="text" name="user-id" id="user-id" />
         </div>
         <div class="flex flex-col gap-1 mb-3">
           <label for="password">Senha:</label>
@@ -43,11 +44,11 @@
         />
       </div>
     </form>
-    <aside class="flex-1">
+    <aside>
       <img
         src="{% static 'core/images/desenho.png' %}"
         alt="lineart de alunos em sala de aula"
-        class="bg-gray-200 h-full object-cover object-center rounded-r-2xl"
+        class="bg-gray-200 w-full h-full object-cover object-top rounded-r-2xl"
       />
     </aside>
   </section>
