--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -23,6 +23,7 @@
         name="username"
         id="txt-username"
         maxlength="150"
+        minlength="10"
         size="30"
         required
         x-model="name"
