--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -33,9 +33,7 @@
           <input type="password" name="password" id="password" />
         </div>
 
-        <a href="new_password" class="text-sky-700 dark:text-sky-500"
-          >Enqueci a senha</a
-        >
+        <a href="new_password" class="text-sky-700 dark:text-sky-500">Enqueci a senha</a>
         <br />
         <input
           type="submit"
